# Navigate-the-maze-of-doom

./: .gitattributes  LICENSE  README.md
releases/phase1/: console.sh  navigate_p1
releases/phase1/testers/: t7009.QUERY  t7010.QUERY  t7017.QUERY  t7020.1maps
releases/phase2/: console.sh
releases/phase2/testers/: 250-250-101_01.solmaps  250-250-121_01.check  250-250-301_01.check  250-250-301_02.check  250-250-30_08.check  250-250-381_01.solmaps  (+10 more)
releases/visual/: visual
src_code/src_phase1/: builder.c  navigate.c  navigate.h  navigation.c
src_code/src_phase2/: CMakeLists.txt  graph.c  graph.h  navigate.c  stack.h
src_code/visual/: CMakeLists.txt  graph.c  graph.h  visualization.c
src_phase1/: CMakeLists.txt  builder.c  console.sh  makefile  navigate  navigate.c  navigate.h  processing.c  time.txt
src_phase1/Primeira Fase/: t7002.QUERY  t7003.1maps
src_phase1/Professor/: 21.QUERY  t7004.1maps  t7004.sol1maps  t7012.sol1maps  t7018.sol1maps  t7020.sol1maps  t9022.sol1maps
src_phase1/testers/: t7001.1maps  t7003.QUERY  t7005.QUERY  t7006.QUERY  t7008.QUERY  t7010.1maps  t7011.1maps  t7011.sol1maps  t7014.sol1maps
src_phase2/: CMakeLists.txt  console.sh  graph.c  graph.h  makefile  navigate  navigateChecker  stack.c  stack.h  time.txt  valgrind.txt
src_phase2/testers/: 250-250-101_02.check  250-250-121_01.maps  250-250-121_02.maps  250-250-141_01.maps  250-250-161_02.solmaps  250-250-30_08.solmaps  250-250-321_02.maps  250-250-321_02.solmaps  250-250-381_01.check  250-250-401_01.check  250-250-401_01.maps  41-53-16-18.solmaps  41-53-16-27.maps  41-53-28.check  41-53-32.check  t5001.maps  t5004.maps  t5005.maps  t5008.check  t5027.check  t5029.maps
testers/Primeira Fase/: 21.1maps  Uma_tradicao_que...nao.1maps...se_pode_perder_que_e_estender_o_guardanapo.1maps_a_ver_se_o_pessoal_abre_a_pestanhinha.QUERY  t7001.QUERY  t7002.1maps  t7005.1maps  t7006.1maps  t7007.1maps  t7007.QUERY  t7008.1maps  t7012.1maps  t7015.QUERY  t7016.QUERY  t7019.QUERY  t9022.1maps  t9023.QUERY
visual/: 250-250-30_01.maps  graph.c  graph.h  main.c  makefile  navigate.c  o.txt  stack.c  stack.h  visualization.c  visualization.h
visual/examples/: 250-250-101_01.maps  250-250-161_01.maps  41-53-16-18.maps  41-53-16-28.maps  41-53-16-29.maps  41-53-30.maps  41-53-31.maps  41-53-70.maps  41-53-71.maps  41-53-73.maps  t5006.maps  t5007.maps  t5008.maps  t5009.maps  t5028.maps
(+400 files in other folders)
